--- a/test6.css
+++ b/test6.css
@@ -14,8 +14,8 @@
     /* padding: 1rem; */
 }
 iframe {
-    width: 100% !important;
-    height: 300px !important;
+    width: 100%;
+    height: 250px;
 }
 .swiper-container {
     width: 100%;
